[project]
name = "rg-mix"
version = "0.1.0"
tags = ["reasoning", "reasoning-gym", "single-turn", "xml", "mixture"]
license = "Apache-2.0"
description = "Mixed reasoning-gym single-turn environment (arc_1d, sokoban, countdown, zebra, cryptarithm) over a fixed saved dataset; rewards in [0,1]."
dependencies = [
    "verifiers>=0.1.5.post0",
    "datasets",
    "reasoning-gym",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rg_mix.py", "build_dataset.py"]

[tool.hatch.build.targets.wheel]
include = ["rg_mix.py", "build_dataset.py"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
